# coding-problems

./: .gitignore  B10D.cpp  BAPC10I.cpp  BAPC10J.cpp  BAPC12E.cpp  BAPC12F.cpp  CMakeLists.txt  EAPC08C.cpp  EAPC11D.cpp  EAPC12C.cpp  EAPC12H.cpp  EAPC14D.cpp  EAPC18J.cpp  README.md  UKIE17J.cpp  UVA00101.cpp  UVA00119.cpp  UVA00146.cpp  UVA00161.cpp  UVA00441.cpp  UVA00514.cpp  UVA00556.cpp  UVA00573.cpp  UVA00624.cpp  UVA00637.cpp  UVA00732.cpp  UVA00735.cpp  UVA00893.cpp  UVA01124.cpp~Updated upstream  UVA01237.cpp  UVA01241.cpp  UVA01260.cpp  UVA10102.cpp  UVA10107.cpp  UVA10189.cpp  UVA10258.cpp  UVA10284.cpp  UVA10443.cpp  UVA10550.cpp  UVA10646.cpp  (+38 more)
.github/workflows/: update-readme.yaml
advent-of-code-2019/: 01-1.cpp  01-2.cpp  02-2.cpp  2019-02-1.cpp  2019-03-1.cpp
advent-of-code-2020/: 2020-01-2.cpp  2020-02-2.cpp  2020-03-1.cpp  2020-03-2.cpp  2020-04-1.cpp  2020-04-2  2020-04-2.cpp  2020-05-1.cpp  2020-05-2.cpp  2020-06-1.cpp  2020-07-2.cpp  2020-09-2.cpp  2020-10-1.cpp  2020-10-2.cpp  2020-11-1.cpp  2020-11-2.cpp  2020-12-1.cpp  2020-12-2.cpp  2020-13-1  2020-13-1.cpp  2020-13-2  2020-13-2.cpp  2020-14-1.cpp  2020-14-2.cpp  2020-15-1.cpp  2020-15-2  2020-16-2.cpp  2020-17-1.cpp  2020-17-2.cpp  2020-18-2.cpp  2020-19-1.cpp  2020-19-2.cpp  2020-20-1.cpp  2020-20-2.cpp  2020-21-2.cpp  2020-22-2.cpp  2020-23-1.cpp  2020-23-2.cpp  2020-24-2.cpp  2020-25-1.cpp
advent-of-code-2020/input/: 13 copy 2.txt  13 copy 3.txt
advent-of-code-2021/: 01-1.cpp  01-2.cpp  03-2.cpp  04-1.cpp  05-2.cpp  06-2.cpp  07-1.cpp  08-2.cpp  09-1.cpp  10-1.cpp  10-2.cpp  11-1.cpp  13-2.cpp  14-1.cpp  14-2.cpp  15-2.cpp  16-1.cpp  18-1.cpp  21-2.cpp  22-1.cpp  23-1.cpp
advent-of-code/2019/: 04-2.cpp
advent-of-code/2020/: 2020-02-1.cpp  2020-07-1.cpp  2020-15-2.cpp  2020-16-1.cpp  2020-16-2.cpp  2020-18-1.cpp  2020-24-1.cpp
advent-of-code/2021/: 02-1.cpp  03-1.cpp  08-1.cpp  09-2.cpp  11-2.cpp  12-2.cpp  13-1.cpp  15-1.cpp  15-2.cpp  16-1.cpp  17-1.cpp  20-2.cpp  21-1.cpp  22-2.cpp  23-1.cpp  23-2.cpp
bapc-2021/A/: A.cpp  makefile
bapc-2021/B/: B.cpp  makefile
bapc-2021/C/: C.cpp  makefile
bapc-2021/D/: makefile
bapc-2021/E/: makefile
bapc-2021/F/: F  makefile
bapc-2021/G/: makefile
bapc-2021/H/: makefile
bapc-2021/I/: makefile
bapc-2021/J/: makefile
bapc-2021/K/: makefile
bapc-2021/L/: L.py  makefile
code-jam-2021/: append-sort.cpp  double-or-noting  double-or-noting.cpp  gen.py
code-jam/2021/: broken-clock.py  c  roaring-years.py
codechef/: bitwise-tuples.py  chef-vs-bharat.cpp  input.txt  minimum-dual-area  minimum-dual-area.py  relativity.cpp  shortest-route.py  summer-heat.py  tmp
codechef/ACS/: sol.cpp
codechef/BINBASBASIC/: sol.cpp
codechef/BITBLEND/: sol.cpp
codechef/CHFCLASS/: sol.py
codechef/DNASTRAND/: sol.cpp
codechef/MAXMEXPATH/: sol.py
codechef/NOFIX/: sol.cpp
codechef/SUBSTRING/: sol.py
codility/: run
data-structures/: avltree.cpp
domjudge/: B11B.cpp  BAPC06I.cpp  BAPC10A.cpp  BAPC10F.cpp  BAPC10J.cpp  BAPC12F.cpp  BAPC12I.cpp  BAPC13F.cpp  BAPC13I.cpp  BAPC16B.cpp  BAPC16C.cpp  BAPC16I.cpp  BAPC16L.cpp  BAPC18B.py  EAPC05H.cpp  EAPC06D.cpp  EAPC08G.cpp  EAPC10B.cpp  EAPC11F.cpp  EAPC13B.cpp  EAPC13C.cpp  EAPC13E.cpp  EAPC13G.cpp  EAPC13H.cpp  EAPC14D.cpp  EAPC15A.cpp  EAPC15D.cpp  GCPC16I.cpp  NCPC12A.cpp  NCPC15C.cpp  NCPC18B.cpp  NCPC18C.cpp  NWERC05.cpp  NWERC16X.cpp  UKIE16F.cpp  UKIE16I.cpp  UKIE17C.cpp  UKIE17J.cpp  UKIE18A.cpp  UKIE18B.cpp  (+5 more)
example/: solution.py
gists/: algorithms-backtrack.cpp  all_combinations.cpp  all_digits.cpp  all_sets.cpp  articulation-points-bridges.cpp  bellman-ford.cpp  binary index tree.cpp  flow.cpp  floyd-warshall.cpp  lines.cpp  ostream.cpp  point.cpp  pointcomplex.cpp  problem1.cpp  regex.cpp  trie.cpp  union-find.cpp  union-find2.cpp  unique_digits.cpp
kattis/: input-1.txt  input-3.txt  input-5.txt  input-6.txt  input-8.txt  input-9.txt  words.txt
projecteuler/: 0001.cpp  0002.cpp  0003.cpp  0004.cpp  0005.cpp  0006.cpp  0008.cpp  0009.cpp  0011.cpp  0012.cpp  0013.cpp  0014.cpp  0015.cpp  0017.cpp  0019.py  0020.cpp  0021.cpp  0022.cpp  0023.cpp  0024.cpp  0025.cpp  0026.cpp  0027.cpp  0028.cpp  0029.cpp  0030.cpp  0031.cpp  0032.cpp  0034.cpp  0035.cpp  0067.cpp  0081.cpp  0205.cpp
templates/: geometry.cpp
uva/: 10878.cpp  UVA00100.cpp  UVA00101.cpp  UVA00102.cpp  UVA00136.cpp  UVA00161.cpp  UVA00191.cpp  UVA00230.cpp  UVA00247.cpp  UVA00256.cpp  UVA00264.cpp  UVA00272.cpp  UVA00280.cpp  UVA00299.cpp  UVA00315.cpp  UVA00318.cpp  UVA00382.cpp  UVA00401.cpp  UVA00414.cpp  UVA00429.cpp  UVA00458.cpp  UVA00482.cpp  UVA00483.cpp  UVA00484.cpp  UVA00494.cpp  UVA00499.cpp  UVA00524.cpp  UVA00541.cpp  UVA00543.cpp  UVA00556.cpp  UVA00572.cpp  UVA00574.cpp  UVA00584.cpp  UVA00591.cpp  UVA00594.cpp  UVA00621.cpp  UVA00628.cpp  UVA00637.cpp  UVA00696.cpp  UVA00706.cpp  (+108 more)
(+1257 files in other folders)
