cmake_minimum_required(VERSION 3.12)
project(code_cpp)

set(CMAKE_CXX_STANDARD 11)

# gists
add_executable(unique_digits gists/unique_digits.cpp)
add_executable(all_digits gists/all_digits.cpp)

#add_executable(UVA00230 UVA00230.cpp)
add_executable(B10D B10D.cpp)
add_executable(BAPC10I BAPC10I.cpp)
add_executable(BAPC10J BAPC10J.cpp)
add_executable(BAPC12E BAPC12E.cpp)
add_executable(BAPC12F BAPC12F.cpp)
add_executable(EAPC05H EAPC05H.cpp)
add_executable(EAPC08C EAPC08C.cpp)
add_executable(EAPC12C EAPC12C.cpp)
add_executable(EAPC12H EAPC12H.cpp)
add_executable(EAPC13C EAPC13C.cpp)
add_executable(EAPC14D EAPC14D.cpp)
add_executable(EAPC18B EAPC18B.cpp)
add_executable(EAPC18J EAPC18J.cpp)
add_executable(NWERC05 NWERC05.cpp)
add_executable(UKIE17J UKIE17J.cpp)
add_executable(UVA00100 UVA00100.cpp)
add_executable(UVA00119 UVA00119.cpp)
add_executable(UVA00146 UVA00146.cpp)
add_executable(UVA00156 UVA00156.cpp)
add_executable(UVA00161 UVA00161.cpp)
add_executable(UVA00195 UVA00195.cpp)
add_executable(UVA00272 UVA00272.cpp)
add_executable(UVA00401 UVA00401.cpp)
add_executable(UVA00454 UVA00454.cpp)
add_executable(UVA00462 UVA00462.cpp)
add_executable(UVA00489 UVA00489.cpp)
add_executable(UVA00514 UVA00514.cpp)
add_executable(UVA00573 UVA00573.cpp)
add_executable(UVA00579 UVA00579.cpp)
add_executable(UVA00594 UVA00594.cpp)
add_executable(UVA00621 UVA00621.cpp)
add_executable(UVA00637 UVA00637.cpp)
add_executable(UVA00732 UVA00732.cpp)
add_executable(UVA00927 UVA00927.cpp)
add_executable(UVA01062 UVA01062.cpp)
add_executable(UVA01124 UVA01124.cpp)
add_executable(UVA01203 UVA01203.cpp)
add_executable(UVA01241 UVA01241.cpp)
add_executable(UVA10018 UVA10018.cpp)
add_executable(UVA10038 UVA10038.cpp)
add_executable(UVA10107 UVA10107.cpp)
add_executable(UVA10114 UVA10114.cpp)
add_executable(UVA10141 UVA10141.cpp)
add_executable(UVA10189 UVA10189.cpp)
add_executable(UVA10226 UVA10226.cpp)
add_executable(UVA10258 UVA10258.cpp)
add_executable(UVA10300 UVA10300.cpp)
add_executable(UVA10550 UVA10550.cpp)
add_executable(UVA10646 UVA10646.cpp)
add_executable(UVA10812 UVA10812.cpp)
add_executable(UVA10855 UVA10855.cpp)
add_executable(UVA10895 UVA10895.cpp)
add_executable(UVA10945 UVA10945.cpp)
add_executable(UVA10954 UVA10954.cpp)
add_executable(UVA10963 UVA10963.cpp)
add_executable(UVA11044 UVA11044.cpp)
add_executable(UVA11172 UVA11172.cpp)
add_executable(UVA11173 UVA11173.cpp)
add_executable(UVA11221 UVA11221.cpp)
add_executable(UVA11286 UVA11286.cpp)
add_executable(UVA11332 UVA11332.cpp)
add_executable(UVA11340 UVA11340.cpp)
add_executable(UVA11364 UVA11364.cpp)
add_executable(UVA11459 UVA11459.cpp)
add_executable(UVA11498 UVA11498.cpp)
add_executable(UVA11507 UVA11507.cpp)
add_executable(UVA11547 UVA11547.cpp)
add_executable(UVA11559 UVA11559.cpp)
add_executable(UVA11572 UVA11572.cpp)
add_executable(UVA11679 UVA11679.cpp)
add_executable(UVA11727 UVA11727.cpp)
add_executable(UVA11764 UVA11764.cpp)
add_executable(UVA11799 UVA11799.cpp)
add_executable(UVA11849 UVA11849.cpp)
add_executable(UVA11926 UVA11926.cpp)
add_executable(UVA11933 UVA11933.cpp)
add_executable(UVA11942 UVA11942.cpp)
add_executable(UVA11988 UVA11988.cpp)
add_executable(UVA11991 UVA11991.cpp)
add_executable(UVA11995 UVA11995.cpp)
add_executable(UVA12015 UVA12015.cpp)
add_executable(UVA12157 UVA12157.cpp)
add_executable(UVA12247 UVA12247.cpp)
add_executable(UVA12250 UVA12250.cpp)
add_executable(UVA12279 UVA12279.cpp)
add_executable(UVA12289 UVA12289.cpp)
add_executable(UVA12356 UVA12356.cpp)
add_executable(UVA12372 UVA12372.cpp)
add_executable(UVA12403 UVA12403.cpp)
add_executable(UVA12468 UVA12468.cpp)
add_executable(UVA12503 UVA12503.cpp)
add_executable(UVA12541 UVA12541.cpp)
add_executable(UVA12554 UVA12554.cpp)
add_executable(UVA12577 UVA12577.cpp)